kube-compose.yaml
apiVersion: v1
kind: Service
metadata: 
  labels:
    service: dockercoins
  name: dockercoins
spec:
  clusterIP: ''
  ports: 
    - 
      name: http
      port: 8080
      protocol: TCP 
      targetPort: 8080
  selector:
    branch: santander
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dockercoins
spec:
  host: dockercoins
  subsets:
    -
      name: hasher
      labels:
        app: hasher
    -
      name: rng
      labels:
        app: rng
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dockercoins
spec:
  hosts:
    - '*'
  gateways:
    - dockercoins
  http:
    -
      match:
        -
          uri:
            exact: /
      route:
        -
          destination: 
            host: dockercoins
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dockercoins
spec:
  selector:
    istio: ingressgateway
  servers:
    -
      port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - '*'
